main section fix

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
 
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style-mobile.css">
 </head>
 
 <body>
@@ -51,6 +52,30 @@
                                 </svg>
                                 <span>Download CV</span>
                             </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="main_section">
+            <div class="main_container">
+                <div class="row align-items-center my-4">
+                    <div class="col-md-6">
+                        <p class="lwd_main">Laravel Web Developer</p>
+                        <h1 class="tn_main">Tirumani Nadar</h1>
+                        <h4 class="fs_main">Full-Stack</h4>
+                        <h4 class="wd_main mb-3">Web Developer</h4>
+                        <p class="desc_main pb-3">Passionate about building robust and scalable web applications with
+                            Laravel, PHP, and modern
+                            frontend technologies.</p>
+                        <div class="btns mt-4 mb-5">
+                            <a href="" class="cbtn cbtn-danger">Contact</a>
+                        </div>
+                    </div>
+                    <div class="col-md-6 d-none d-md-block">
+                        <div>
+                            <img src="img/main.jpg" class="main_img" alt="">
                         </div>
                     </div>
                 </div>
