main section update

--- a/index.html
+++ b/index.html
@@ -69,8 +69,29 @@
                         <p class="desc_main pb-3">Passionate about building robust and scalable web applications with
                             Laravel, PHP, and modern
                             frontend technologies.</p>
-                        <div class="btns mt-4 mb-5">
+                        <div class="btns mt-4 mb-4">
                             <a href="" class="cbtn cbtn-danger">Contact</a>
+                        </div>
+                        <div class="">
+                            <h6 class="ts_main">Tech Stack</h6>
+                            <div class="ts_list_div">
+                                <div class="ts_list">
+                                    <img src="img/laravel.svg" alt="">
+                                    <p>Laravel</p>
+                                </div>
+                                <div class="ts_list">
+                                    <img src="img/php.svg" alt="" class="php_svg">
+                                    <p>PHP</p>
+                                </div>
+                                <div class="ts_list">
+                                    <img src="img/mysql.svg" alt="">
+                                    <p>MySQL</p>
+                                </div>
+                                <div class="ts_list">
+                                    <img src="img/vue-js.svg" alt="">
+                                    <p>Vue.js</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="col-md-6 d-none d-md-block">
@@ -81,6 +102,8 @@
                 </div>
             </div>
         </section>
+
+
 
         <section class="home" style="height: 4000px;background-color: aqua;">
 
