--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         <section class="main_section">
             <div class="main_container">
-                <div class="row align-items-center my-4">
+                <div class="row align-items-center mt-1 mb-4">
                     <div class="col-md-6">
                         <p class="lwd_main">Laravel Web Developer</p>
                         <h1 class="tn_main">Tirumani Nadar</h1>
@@ -69,7 +69,7 @@
                         <p class="desc_main pb-3">Passionate about building robust and scalable web applications with
                             Laravel, PHP, and modern
                             frontend technologies.</p>
-                        <div class="btns mt-4 mb-4">
+                        <div class="btns mt-4 mb-5">
                             <a href="" class="cbtn cbtn-danger">Contact</a>
                         </div>
                         <div class="">
