--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         <section class="main_section">
             <div class="main_container">
-                <div class="row align-items-center mt-1 mb-4">
+                <div class="row align-items-center mt-1 mt-md-4 mb-4">
                     <div class="col-md-6">
                         <p class="lwd_main">Laravel Web Developer</p>
                         <h1 class="tn_main">Tirumani Nadar</h1>
@@ -97,6 +97,70 @@
                     <div class="col-md-6 d-none d-md-block">
                         <div>
                             <img src="img/main.jpg" class="main_img" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="about_section">
+            <div class="about_container pb-5">
+                <h4 class="c_heading">About Me</h4>
+                <p class="c_line"></p>
+                <p class="c_description">Get to know more about me and my journey as a Web Developer</p>
+
+                <div class="row pb-3">
+                    <div class="col-md-6 mb-3 mb-md-0">
+                        <div class="about_img_div">
+                            <img src="/img/about.jpg" alt="" class="about_img">
+                            <div class="about_img_circle">4+ Years</div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 mt-5 mt-md-0">
+                        <h5 class="cont_heading">PHP Developer & Web Enthusiast</h5>
+                        <p class="cont_desc">I am a Web Developer with four years of experience, demonstrating expertise
+                            in crafting
+                            robust and scalable solutions. I describe myself as a passionate developer who loves coding,
+                            a tech enthusiast, and one who tends to learn new technologies.
+                        </p>
+                        <p class="cont_desc">I am adept at collaborating with team members to achieve shared objectives,
+                            leveraging
+                            strong interpersonal skills to contribute effectively to collaborative projects.
+                        </p>
+
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="as_cont">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                        fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                        stroke-linejoin="round" class="ase_icon"
+                                        data-lov-id="src/components/About.tsx:51:20" data-lov-name="BriefcaseIcon"
+                                        data-component-path="src/components/About.tsx" data-component-line="51"
+                                        data-component-file="About.tsx" data-component-name="BriefcaseIcon"
+                                        data-component-content="%7B%22className%22%3A%22w-6%20h-6%20text-laravel%22%7D">
+                                        <path d="M16 20V4a2 2 0 0 0-2-2h-4a2 2 0 0 0-2 2v16"></path>
+                                        <rect width="20" height="14" x="2" y="6" rx="2"></rect>
+                                    </svg>
+                                    <h5 class="as_heading">4+ Years</h5>
+                                    <p class="as_description mb-0">Professional Experience</p>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="as_cont">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                        fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                        stroke-linejoin="round" class="asp_icon"
+                                        data-lov-id="src/components/About.tsx:61:20" data-lov-name="Code"
+                                        data-component-path="src/components/About.tsx" data-component-line="61"
+                                        data-component-file="About.tsx" data-component-name="Code"
+                                        data-component-content="%7B%22className%22%3A%22w-6%20h-6%20text-blue-600%22%7D">
+                                        <polyline points="16 18 22 12 16 6"></polyline>
+                                        <polyline points="8 6 2 12 8 18"></polyline>
+                                    </svg>
+                                    <h5 class="as_heading">20+ Projects</h5>
+                                    <p class="as_description mb-0">Completed</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
