--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <div class="row pb-3">
                     <div class="col-md-6 mb-3 mb-md-0">
                         <div class="about_img_div">
-                            <img src="/img/about.jpg" alt="" class="about_img">
+                            <img src="img/about.jpg" alt="" class="about_img">
                             <div class="about_img_circle">4+ Years</div>
                         </div>
                     </div>
