--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <p class="c_line"></p>
                 <p class="c_description">Get to know more about me and my journey as a Web Developer</p>
 
-                <div class="row pb-3">
+                <div class="row pb-5">
                     <div class="col-md-6 mb-3 mb-md-0">
                         <div class="about_img_div">
                             <img src="img/about.jpg" alt="" class="about_img">
@@ -163,6 +163,45 @@
                             </div>
                         </div>
                     </div>
+                </div>
+                <div class="a_end mt-4 pb-2">
+                    <a href="">
+                        <span>Explore my skills
+                        </span>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                            class="ems_svg animate-bounce" data-lov-id="src/components/About.tsx:74:12"
+                            data-lov-name="ArrowDown" data-component-path="src/components/About.tsx"
+                            data-component-line="74" data-component-file="About.tsx" data-component-name="ArrowDown"
+                            data-component-content="%7B%22className%22%3A%22w-4%20h-4%20animate-bounce%22%7D">
+                            <path d="M12 5v14"></path>
+                            <path d="m19 12-7 7-7-7"></path>
+                        </svg>
+                    </a>
+                </div>
+            </div>
+        </section>
+
+        <section class="skills_section">
+            <div class="skills_container mb-5">
+                <h4 class="c_heading">My Skills</h4>
+                <p class="c_line"></p>
+                <p class="c_description">A showcase of my technical expertise and proficiency</p>
+
+                <div class="skill_div">
+                    <div class="row">
+                        <div class="col-md-3">
+                            <div class="sk_heading d-flex align-items-center">
+                                <div class="sk_inital">
+                                    <span>B</span>
+                                </div>
+                                <p class="mb-0">Backend Development</p>
+                            </div>
+                        </div>
+                        <div class="col-md-3"></div>
+                        <div class="col-md-3"></div>
+                    </div>
+
                 </div>
             </div>
         </section>
