skill section update

--- a/index.html
+++ b/index.html
@@ -188,18 +188,191 @@
                 <p class="c_line"></p>
                 <p class="c_description">A showcase of my technical expertise and proficiency</p>
 
-                <div class="skill_div">
+                <div class="skill_div mb-5">
                     <div class="row">
-                        <div class="col-md-3">
+
+                        <div class="col-md-4">
                             <div class="sk_heading d-flex align-items-center">
                                 <div class="sk_inital">
                                     <span>B</span>
                                 </div>
                                 <p class="mb-0">Backend Development</p>
                             </div>
+
+                            <div class="sk_list_div">
+                                <div class="sk_list_card">
+                                    <div class="d-flex align-items-center">
+                                        <div class="sk_inital bg-sk-red-50">
+                                            <span class="text-sk-red-100">L</span>
+                                        </div>
+                                        <p class="mb-0">Laravel</p>
+                                    </div>
+                                    <div class="sk_range_div">
+                                        <div class="sk_range bg-sk-red-100" style="width: 85%;"></div>
+                                    </div>
+                                </div>
+                                <div class="sk_list_card">
+                                    <div class="d-flex align-items-center">
+                                        <div class="sk_inital bg-sk-light-voilet-20">
+                                            <span class="text-sk-light-voilet-100">P</span>
+                                        </div>
+                                        <p class="mb-0">PHP</p>
+                                    </div>
+                                    <div class="sk_range_div">
+                                        <div class="sk_range bg-sk-light-voilet-100" style="width: 85%;"></div>
+                                    </div>
+                                </div>
+                                <div class="sk_list_card">
+                                    <div class="d-flex align-items-center">
+                                        <div class="sk_inital bg-sk-light-blue-20">
+                                            <span class="text-sk-light-blue-100">M</span>
+                                        </div>
+                                        <p class="mb-0">MySql</p>
+                                    </div>
+                                    <div class="sk_range_div">
+                                        <div class="sk_range bg-sk-light-blue-100" style="width: 75%;"></div>
+                                    </div>
+                                </div>
+                                <div class="sk_list_card">
+                                    <div class="d-flex align-items-center">
+                                        <div class="sk_inital bg-sk-dark-blue-20">
+                                            <span class="text-sk-dark-blue-100">A</span>
+                                        </div>
+                                        <p class="mb-0">API Development</p>
+                                    </div>
+                                    <div class="sk_range_div">
+                                        <div class="sk_range bg-sk-dark-blue-100" style="width: 80%;"></div>
+                                    </div>
+                                </div>
+                                <div class="sk_list_card">
+                                    <div class="d-flex align-items-center">
+                                        <div class="sk_inital bg-sk-dark-green-20">
+                                            <span class="text-sk-dark-green-100">M</span>
+                                        </div>
+                                        <p class="mb-0">MVC Architecture</p>
+                                    </div>
+                                    <div class="sk_range_div">
+                                        <div class="sk_range bg-sk-dark-green-100" style="width: 82%;"></div>
+                                    </div>
+                                </div>
+
+                            </div>
                         </div>
-                        <div class="col-md-3"></div>
-                        <div class="col-md-3"></div>
+
+                        <div class="col-md-4">
+                            <div class="sk_heading d-flex align-items-center">
+                                <div class="sk_inital">
+                                    <span>B</span>
+                                </div>
+                                <p class="mb-0">Frontend Development</p>
+                            </div>
+
+                            <div class="sk_list_div">
+                                <div class="sk_list_card">
+                                    <div class="d-flex align-items-center">
+                                        <div class="sk_inital bg-sk-green-50">
+                                            <span class="text-sk-green-100">V</span>
+                                        </div>
+                                        <p class="mb-0">Vue.js</p>
+                                    </div>
+                                    <div class="sk_range_div">
+                                        <div class="sk_range bg-sk-green-100" style="width: 85%;"></div>
+                                    </div>
+                                </div>
+                                <div class="sk_list_card">
+                                    <div class="d-flex align-items-center">
+                                        <div class="sk_inital bg-sk-voilet-20">
+                                            <span class="text-sk-voilet-100">L</span>
+                                        </div>
+                                        <p class="mb-0">Livewire</p>
+                                    </div>
+                                    <div class="sk_range_div">
+                                        <div class="sk_range bg-sk-voilet-100" style="width: 85%;"></div>
+                                    </div>
+                                </div>
+                                <div class="sk_list_card">
+                                    <div class="d-flex align-items-center">
+                                        <div class="sk_inital bg-sk-yellow-20">
+                                            <span class="text-sk-yellow-100">J</span>
+                                        </div>
+                                        <p class="mb-0">Javascript</p>
+                                    </div>
+                                    <div class="sk_range_div">
+                                        <div class="sk_range bg-sk-yellow-100" style="width: 75%;"></div>
+                                    </div>
+                                </div>
+                                <!-- <div class="sk_list_card">
+                                    <div class="d-flex align-items-center">
+                                        <div class="sk_inital bg-sk-light-green-20">
+                                            <span class="text-sk-light-green-100">T</span>
+                                        </div>
+                                        <p class="mb-0">Tailwind CSS</p>
+                                    </div>
+                                    <div class="sk_range_div">
+                                        <div class="sk_range bg-sk-light-green-100" style="width: 80%;"></div>
+                                    </div>
+                                </div> -->
+                                <div class="sk_list_card">
+                                    <div class="d-flex align-items-center">
+                                        <div class="sk_inital bg-sk-white-20">
+                                            <span class="text-sk-white-100">H</span>
+                                        </div>
+                                        <p class="mb-0">HTML & CSS</p>
+                                    </div>
+                                    <div class="sk_range_div">
+                                        <div class="sk_range bg-sk-white-100" style="width: 82%;"></div>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+
+                        <div class="col-md-4">
+                            <div class="sk_heading d-flex align-items-center">
+                                <div class="sk_inital">
+                                    <span>D</span>
+                                </div>
+                                <p class="mb-0">DevOps & Others</p>
+                            </div>
+
+                            <div class="sk_list_div">
+                                <div class="sk_list_card">
+                                    <div class="d-flex align-items-center">
+                                        <div class="sk_inital bg-sk-yellow-50">
+                                            <span class="text-sk-yellow-100">A</span>
+                                        </div>
+                                        <p class="mb-0">AWS Services</p>
+                                    </div>
+                                    <div class="sk_range_div">
+                                        <div class="sk_range bg-sk-yellow-100" style="width: 85%;"></div>
+                                    </div>
+                                </div>
+                                <div class="sk_list_card">
+                                    <div class="d-flex align-items-center">
+                                        <div class="sk_inital bg-sk-white-20">
+                                            <span class="text-sk-white-100">G</span>
+                                        </div>
+                                        <p class="mb-0">Git/GitHub</p>
+                                    </div>
+                                    <div class="sk_range_div">
+                                        <div class="sk_range bg-sk-white-100" style="width: 85%;"></div>
+                                    </div>
+                                </div>
+                                <div class="sk_list_card">
+                                    <div class="d-flex align-items-center">
+                                        <div class="sk_inital bg-sk-red-20">
+                                            <span class="text-sk-red-100">S</span>
+                                        </div>
+                                        <p class="mb-0">Server Management</p>
+                                    </div>
+                                    <div class="sk_range_div">
+                                        <div class="sk_range bg-sk-red-100" style="width: 75%;"></div>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+
                     </div>
 
                 </div>
