--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                 <div class="skill_div mb-5">
                     <div class="row">
 
-                        <div class="col-md-4">
+                        <div class="col-md-4 mb-3 mb-md-0">
                             <div class="sk_heading d-flex align-items-center">
                                 <div class="sk_inital">
                                     <span>B</span>
@@ -259,7 +259,7 @@
                             </div>
                         </div>
 
-                        <div class="col-md-4">
+                        <div class="col-md-4 mb-3 mb-md-0">
                             <div class="sk_heading d-flex align-items-center">
                                 <div class="sk_inital">
                                     <span>B</span>
@@ -327,7 +327,7 @@
                             </div>
                         </div>
 
-                        <div class="col-md-4">
+                        <div class="col-md-4 mb-0 mb-md-0">
                             <div class="sk_heading d-flex align-items-center">
                                 <div class="sk_inital">
                                     <span>D</span>
