--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         </section>
 
         <section class="skills_section">
-            <div class="skills_container mb-5">
+            <div class="skills_container pb-4">
                 <h4 class="c_heading">My Skills</h4>
                 <p class="c_line"></p>
                 <p class="c_description">A showcase of my technical expertise and proficiency</p>
@@ -379,9 +379,74 @@
             </div>
         </section>
 
+        <section class="exp_section">
+            <div class="exp_container pb-4">
+                <h4 class="c_heading">Professional Experience</h4>
+                <p class="c_line"></p>
+                <p class="c_description">My journey and growth as a Laravel developer</p>
+                <div>
+                    <div class="timeline">
+
+                        <div class="timeline-item timeline-left">
+                            <div class="timeline_card">
+                                <div class="timeline_red_line"></div>
+                                <div class="timeline_card_content">
+                                    <h3>Senior Laravel Developer</h3>
+                                    <p>Web Solutions Inc.<br><small>May 2022 - Present</small></p>
+                                    <p><em>Leading development team in creating robust web applications</em></p>
+                                    <strong>KEY HIGHLIGHTS:</strong>
+                                    <ul>
+                                        <li>Led six-person development team</li>
+                                        <li>Designed databases for web applications</li>
+                                        <li>Implemented RESTful APIs</li>
+                                        <li>Client communication and requirement analysis</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="timeline-item timeline-right">
+                            <div class="timeline_card">
+                                <div class="timeline_red_line"></div>
+                                <div class="timeline_card_content">
+                                    <h3>Senior Laravel Developer</h3>
+                                    <p>Web Solutions Inc.<br><small>May 2022 - Present</small></p>
+                                    <p><em>Leading development team in creating robust web applications</em></p>
+                                    <strong>KEY HIGHLIGHTS:</strong>
+                                    <ul>
+                                        <li>Led six-person development team</li>
+                                        <li>Designed databases for web applications</li>
+                                        <li>Implemented RESTful APIs</li>
+                                        <li>Client communication and requirement analysis</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="timeline-item timeline-left">
+                            <div class="timeline_card">
+                                <div class="timeline_red_line"></div>
+                                <div class="timeline_card_content">
+                                    <h3>Senior Laravel Developer</h3>
+                                    <p>Web Solutions Inc.<br><small>May 2022 - Present</small></p>
+                                    <p><em>Leading development team in creating robust web applications</em></p>
+                                    <strong>KEY HIGHLIGHTS:</strong>
+                                    <ul>
+                                        <li>Led six-person development team</li>
+                                        <li>Designed databases for web applications</li>
+                                        <li>Implemented RESTful APIs</li>
+                                        <li>Client communication and requirement analysis</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
-        <section class="home" style="height: 4000px;background-color: aqua;">
+
+        <section class="home" style="height: 1000px;background-color: aqua;">
 
         </section>
 
